--- a/references.bib
+++ b/references.bib
@@ -8,7 +8,8 @@
   number={1},
   pages={1--19},
   year={2016},
-  publisher={BioMed Central}
+  publisher={BioMed Central},
+  url={https://link.springer.com/article/10.1186/s13059-016-0881-8}
 }
 
 @article{koch2018beginner,
@@ -19,7 +20,8 @@
   number={2},
   pages={145--157},
   year={2018},
-  publisher={American Thoracic Society}
+  publisher={American Thoracic Society},
+  url={https://www.atsjournals.org/doi/full/10.1165/rcmb.2017-0430TR}
 }
 
 @article{marioni2008rna,
@@ -30,7 +32,8 @@
   number={9},
   pages={1509--1517},
   year={2008},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Lab},
+  url={https://genome.cshlp.org/content/18/9/1509}
 }
 
 @article{schurch2016many,
@@ -509,7 +512,8 @@
   volume={21},
   pages={1--32},
   year={2020},
-  publisher={Springer}
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1186/s13059-019-1850-9}
 }
 
 @article{saelens2019comparison,
@@ -520,7 +524,8 @@
   number={5},
   pages={547--554},
   year={2019},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/s42003-022-03175-5}
 }
 
 ## sc spatial -------------------------------------------------------------------------------
@@ -541,7 +546,8 @@
   author={Yue, Liangchen and Liu, Feng and Hu, Jiongsong and Yang, Pin and Wang, Yuxiang and Dong, Junguo and Shu, Wenjie and Huang, Xingxu and Wang, Shengqi},
   journal={Computational and Structural Biotechnology Journal},
   year={2023},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S2001037023000156}
 }
 
 @article{moses2022museum,
@@ -552,42 +558,11 @@
   number={5},
   pages={534--546},
   year={2022},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/s41592-022-01409-2}
 }
 
 ## atacseq --------------------------------------------------------------------------------------
-
-@article{grandi2022chromatin,
-  title={Chromatin accessibility profiling by ATAC-seq},
-  author={Grandi, Fiorella C and Modi, Hailey and Kampman, Lucas and Corces, M Ryan},
-  journal={Nature Protocols},
-  volume={17},
-  number={6},
-  pages={1518--1552},
-  year={2022},
-  publisher={Nature Publishing Group UK London}
-}
-
-@article{yan2020reads,
-  title={From reads to insight: a hitchhiker’s guide to ATAC-seq data analysis},
-  author={Yan, Feng and Powell, David R and Curtis, David J and Wong, Nicholas C},
-  journal={Genome biology},
-  volume={21},
-  pages={1--16},
-  year={2020},
-  publisher={Springer}
-}
-
-@article{chen2019assessment,
-  title={Assessment of computational methods for the analysis of single-cell ATAC-seq data},
-  author={Chen, Huidong and Lareau, Caleb and Andreani, Tommaso and Vinyard, Michael E and Garcia, Sara P and Clement, Kendell and Andrade-Navarro, Miguel A and Buenrostro, Jason D and Pinello, Luca},
-  journal={Genome biology},
-  volume={20},
-  number={1},
-  pages={1--25},
-  year={2019},
-  publisher={BioMed Central}
-}
 
 @article{stuart2021single,
   title={Single-cell chromatin state analysis with Signac},
@@ -597,7 +572,8 @@
   number={11},
   pages={1333--1341},
   year={2021},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/s41592-021-01282-5}
 }
 
 @article{grandi2022chromatin,
@@ -608,7 +584,8 @@
   number={6},
   pages={1518--1552},
   year={2022},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  url={https://www.nature.com/articles/s41596-022-00692-9}
 }
 
 @article{yan2020reads,
@@ -618,7 +595,8 @@
   volume={21},
   pages={1--16},
   year={2020},
-  publisher={Springer}
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1186/s13059-020-1929-3}
 }
 
 @article{chen2019assessment,
@@ -633,18 +611,6 @@
   url={https://genomebiology.biomedcentral.com/articles/10.1186/s13059-019-1854-5}
 }
 
-@article{stuart2021single,
-  title={Single-cell chromatin state analysis with Signac},
-  author={Stuart, Tim and Srivastava, Avi and Madad, Shaista and Lareau, Caleb A and Satija, Rahul},
-  journal={Nature methods},
-  volume={18},
-  number={11},
-  pages={1333--1341},
-  year={2021},
-  publisher={Nature Publishing Group US New York},
-  url={https://www.nature.com/articles/s41592-021-01282-5}
-}
-
 ## airr ----------------------------------------------------------------------------------------
 
 @article{irac2024single,
@@ -653,7 +619,8 @@
   journal={Nature Methods},
   pages={1--16},
   year={2024},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/s41592-024-02243-4}
 }
 
 @article{breden2017reproducibility,
@@ -663,7 +630,8 @@
   volume={8},
   pages={1418},
   year={2017},
-  publisher={Frontiers Media SA}
+  publisher={Frontiers Media SA},
+  url={https://www.frontiersin.org/journals/immunology/articles/10.3389/fimmu.2017.01418/full}
 }
 
 @article{vander2018airr,
@@ -715,7 +683,7 @@
 	month = {1},
 	publisher = {Taylor & Francis},
 	title = {{Immunobiology}},
-	year = {1994},
+	year = {1994}
 }
 
 @article{andreani2022benchmarking,
@@ -843,7 +811,8 @@
   volume={13},
   pages={2035},
   year={2022},
-  publisher={Frontiers}
+  publisher={Frontiers},
+  url={https://www.frontiersin.org/journals/immunology/articles/10.3389/fimmu.2022.848582/full}
 }
 
 @article{de2018single,
@@ -853,7 +822,8 @@
   volume={9},
   pages={1638},
   year={2018},
-  publisher={Frontiers Media SA}
+  publisher={Frontiers Media SA},
+  url={https://www.frontiersin.org/journals/immunology/articles/10.3389/fimmu.2018.01638/full}
 }
 
 @Inbook{Kavathas2019,
@@ -904,56 +874,6 @@ doi = {10.1016/j.it.2022.01.003},
 url = {https://www.sciencedirect.com/science/article/pii/S1471490622000035},
 author = {Dhakshayini Morgan and Vinay Tergaonkar},
 abstract = {During adaptive immunity, B cells differentiate either into memory B cells or plasma cells and produce antibodies against foreign antigens to fight infection. Additionally, they behave as antigen-presenting cells and participate in T cell activation during cellular immune responses. However, their functional dysregulation can result in various autoimmune diseases and cancers. With significant breakthroughs in single cell technologies, assessing individual B cell genomics, transcriptomics, and proteomics can give deeper insights into mammalian B cell development, differentiation, antibody repertoire, and responses under conditions of homeostasis, infection, and aberrations during disease. In this review, we discuss the adoption of single cell approaches to identify different B cell gene signatures and biomarkers in normal and diseased tissues, and subsequent benefits for future therapeutic discoveries.}
-}
-
-@article{breden2017reproducibility,
-  title={Reproducibility and reuse of adaptive immune receptor repertoire data},
-  author={Breden, Felix and Luning Prak, Eline T and Peters, Bjoern and Rubelt, Florian and Schramm, Chaim A and Busse, Christian E and Vander Heiden, Jason A and Christley, Scott and Bukhari, Syed Ahmad Chan and Thorogood, Adrian and others},
-  journal={Frontiers in immunology},
-  volume={8},
-  pages={1418},
-  year={2017},
-  publisher={Frontiers Media SA}
-}
-
-@article{vander2018airr,
-  title={AIRR community standardized representations for annotated immune repertoires},
-  author={Vander Heiden, Jason Anthony and Marquez, Susanna and Marthandan, Nishanth and Bukhari, Syed Ahmad Chan and Busse, Christian E and Corrie, Brian and Hershberg, Uri and Kleinstein, Steven H and Matsen IV, Frederick A and Ralph, Duncan K and others},
-  journal={Frontiers in immunology},
-  volume={9},
-  pages={2206},
-  year={2018},
-  publisher={Frontiers Media SA}
-}
-
-@article{georgiou2014promise,
-  title={The promise and challenge of high-throughput sequencing of the antibody repertoire},
-  author={Georgiou, George and Ippolito, Gregory C and Beausang, John and Busse, Christian E and Wardemann, Hedda and Quake, Stephen R},
-  journal={Nature biotechnology},
-  volume={32},
-  number={2},
-  pages={158--168},
-  year={2014},
-  publisher={Nature Publishing Group US New York}
-}
-
-@article{barennes2021benchmarking,
-  title={Benchmarking of T cell receptor repertoire profiling methods reveals large systematic biases},
-  author={Barennes, Pierre and Quiniou, Valentin and Shugay, Mikhail and Egorov, Evgeniy S and Davydov, Alexey N and Chudakov, Dmitriy M and Uddin, Imran and Ismail, Mazlina and Oakes, Theres and Chain, Benny and others},
-  journal={Nature biotechnology},
-  volume={39},
-  number={2},
-  pages={236--245},
-  year={2021},
-  publisher={Nature Publishing Group US New York}
-}
-
-@book{janeway-1994,
-	author = {Janeway, Charles and Travers, Paul},
-	month = {1},
-	publisher = {Taylor & Francis},
-	title = {{Immunobiology}},
-	year = {1994},
 }
 
 ## meta transcriptomics ------------------------------------------------------------------------
