Added more celltype prediction info and tools

--- a/references.bib
+++ b/references.bib
@@ -528,6 +528,17 @@
   url={https://www.nature.com/articles/s42003-022-03175-5}
 }
 
+@article{abdelaal2019comparison,
+  title={A comparison of automatic cell identification methods for single-cell RNA sequencing data},
+  author={Abdelaal, Tamim and Michielsen, Lieke and Cats, Davy and Hoogduin, Dylan and Mei, Hailiang and Reinders, Marcel JT and Mahfouz, Ahmed},
+  journal={Genome biology},
+  volume={20},
+  pages={1--19},
+  year={2019},
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1186/s13059-019-1795-z}
+}
+
 ## sc spatial -------------------------------------------------------------------------------
 
 @article{walker2022deciphering,
