--- a/references.bib
+++ b/references.bib
@@ -539,6 +539,18 @@
   url={https://link.springer.com/article/10.1186/s13059-019-1795-z}
 }
 
+@article{andreatta2024semi,
+  title={Semi-supervised integration of single-cell transcriptomics data},
+  author={Andreatta, Massimo and H{\'e}rault, L{\'e}onard and Gueguen, Paul and Gfeller, David and Berenstein, Ariel J and Carmona, Santiago J},
+  journal={Nature Communications},
+  volume={15},
+  number={1},
+  pages={872},
+  year={2024},
+  publisher={Nature Publishing Group UK London},
+  url={https://www.nature.com/articles/s41467-024-45240-z}
+}
+
 ## sc spatial -------------------------------------------------------------------------------
 
 @article{walker2022deciphering,
