Updated atac tools

--- a/references.bib
+++ b/references.bib
@@ -634,6 +634,41 @@
   url={https://genomebiology.biomedcentral.com/articles/10.1186/s13059-019-1854-5}
 }
 
+@article{wang2022benchmarking,
+  title={Benchmarking automated cell type annotation tools for single-cell ATAC-seq data},
+  author={Wang, Yuge and Sun, Xingzhi and Zhao, Hongyu},
+  journal={Frontiers in Genetics},
+  volume={13},
+  pages={1063233},
+  year={2022},
+  publisher={Frontiers Media SA},
+  url={https://www.frontiersin.org/journals/genetics/articles/10.3389/fgene.2022.1063233/full}
+}
+
+@article{de2024systematic,
+  title={Systematic benchmarking of single-cell ATAC-sequencing protocols},
+  author={De Rop, Florian V and Hulselmans, Gert and Flerin, Chris and Soler-Vila, Paula and Rafels, Albert and Christiaens, Valerie and Gonz{\'a}lez-Blas, Carmen Bravo and Marchese, Domenica and Caratu, Ginevra and Poovathingal, Suresh and others},
+  journal={Nature biotechnology},
+  volume={42},
+  number={6},
+  pages={916--926},
+  year={2024},
+  publisher={Nature Publishing Group US New York},
+  url={https://genomebiology.biomedcentral.com/articles/10.1186/s13059-024-03356-x}
+}
+
+@article{granja2021archr,
+  title={ArchR is a scalable software package for integrative single-cell chromatin accessibility analysis},
+  author={Granja, Jeffrey M and Corces, M Ryan and Pierce, Sarah E and Bagdatli, S Tansu and Choudhry, Hani and Chang, Howard Y and Greenleaf, William J},
+  journal={Nature genetics},
+  volume={53},
+  number={3},
+  pages={403--411},
+  year={2021},
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/s41588-021-00790-6}
+}
+
 ## airr ----------------------------------------------------------------------------------------
 
 @article{irac2024single,
