Update ATAC-seq chapter with additional information and tools

--- a/references.bib
+++ b/references.bib
@@ -657,6 +657,18 @@
   url={https://genomebiology.biomedcentral.com/articles/10.1186/s13059-024-03356-x}
 }
 
+@article{luo2024benchmarking,
+  title={Benchmarking computational methods for single-cell chromatin data analysis},
+  author={Luo, Siyuan and Germain, Pierre-Luc and Robinson, Mark D and von Meyenn, Ferdinand},
+  journal={Genome Biology},
+  volume={25},
+  number={1},
+  pages={225},
+  year={2024},
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1186/s13059-024-03356-x}
+}
+
 @article{granja2021archr,
   title={ArchR is a scalable software package for integrative single-cell chromatin accessibility analysis},
   author={Granja, Jeffrey M and Corces, M Ryan and Pierce, Sarah E and Bagdatli, S Tansu and Choudhry, Hani and Chang, Howard Y and Greenleaf, William J},
@@ -667,6 +679,30 @@
   year={2021},
   publisher={Nature Publishing Group US New York},
   url={https://www.nature.com/articles/s41588-021-00790-6}
+}
+
+@article{fang2021comprehensive,
+  title={Comprehensive analysis of single cell ATAC-seq data with SnapATAC},
+  author={Fang, Rongxin and Preissl, Sebastian and Li, Yang and Hou, Xiaomeng and Lucero, Jacinta and Wang, Xinxin and Motamedi, Amir and Shiau, Andrew K and Zhou, Xinzhu and Xie, Fangming and others},
+  journal={Nature communications},
+  volume={12},
+  number={1},
+  pages={1337},
+  year={2021},
+  publisher={Nature Publishing Group UK London},
+  url={https://www.nature.com/articles/s41467-021-21583-9}
+}
+
+@article{shi2022fundamental,
+  title={Fundamental and practical approaches for single-cell ATAC-seq analysis},
+  author={Shi, Peiyu and Nie, Yage and Yang, Jiawen and Zhang, Weixing and Tang, Zhongjie and Xu, Jin},
+  journal={Abiotech},
+  volume={3},
+  number={3},
+  pages={212--223},
+  year={2022},
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1007/s42994-022-00082-5}
 }
 
 ## airr ----------------------------------------------------------------------------------------
