Added an scATACSeq review

--- a/references.bib
+++ b/references.bib
@@ -705,6 +705,17 @@
   url={https://link.springer.com/article/10.1007/s42994-022-00082-5}
 }
 
+@article{baek2020single,
+  title={Single-cell ATAC sequencing analysis: from data preprocessing to hypothesis generation},
+  author={Baek, Seungbyn and Lee, Insuk},
+  journal={Computational and structural biotechnology journal},
+  volume={18},
+  pages={1429--1439},
+  year={2020},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S2001037020303019}
+}
+
 ## airr ----------------------------------------------------------------------------------------
 
 @article{irac2024single,
