Added metacells and cell comm sections

--- a/references.bib
+++ b/references.bib
@@ -551,6 +551,27 @@
   url={https://www.nature.com/articles/s41467-024-45240-z}
 }
 
+@article{almet2021landscape,
+  title={The landscape of cell--cell communication through single-cell transcriptomics},
+  author={Almet, Axel A and Cang, Zixuan and Jin, Suoqin and Nie, Qing},
+  journal={Current opinion in systems biology},
+  volume={26},
+  pages={12--23},
+  year={2021},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S2452310021000081}
+}
+
+@article{bilous2024building,
+  title={Building and analyzing metacells in single-cell genomics data},
+  author={Bilous, Mariia and H{\'e}rault, L{\'e}onard and Gabriel, Aur{\'e}lie AG and Teleman, Matei and Gfeller, David},
+  journal={Molecular Systems Biology},
+  pages={1--23},
+  year={2024},
+  publisher={Nature Publishing Group UK London},
+  url={https://doi.org/10.1038/s44320-024-00045-6}
+}
+
 ## sc spatial -------------------------------------------------------------------------------
 
 @article{walker2022deciphering,
