--- a/references.bib
+++ b/references.bib
@@ -343,7 +343,8 @@
   volume={15},
   number={6},
   pages={e8746},
-  year={2019}
+  year={2019},
+  url={https://doi.org/10.15252/msb.20188746},
 }
 
 @article{heumos2023best,
@@ -352,7 +353,8 @@
   journal={Nature Reviews Genetics},
   pages={1--23},
   year={2023},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  url={https://doi.org/10.1038/s41576-023-00586-w}
 }
 
 @article{fullgrabe2020guidelines,
@@ -363,7 +365,8 @@
   number={12},
   pages={1384--1386},
   year={2020},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://doi.org/10.1038/s41587-020-00744-z}
 }
 
 @article{nguyen2018experimental,
@@ -373,7 +376,8 @@
   volume={6},
   pages={108},
   year={2018},
-  publisher={Frontiers Media SA}
+  publisher={Frontiers Media SA},
+  url={https://doi.org/10.3389/fcell.2018.00108}
 }
 
 @article{zhang2020determining,
@@ -384,7 +388,8 @@
   number={1},
   pages={774},
   year={2020},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  url={https://doi.org/10.1038/s41467-020-14482-y}
 }
 
 @article{baran2018experimental,
@@ -395,7 +400,8 @@
   number={4},
   pages={233--239},
   year={2018},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url={https://doi.org/10.1093/bfgp/elx035}
 }
 
 @article{svensson2017power,
@@ -406,7 +412,8 @@
   number={4},
   pages={381--387},
   year={2017},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://doi.org/10.1038/nmeth.4220}
 }
 
 @article{melsted2019modular,
@@ -415,7 +422,8 @@
   journal={BioRxiv},
   pages={673285},
   year={2019},
-  publisher={Cold Spring Harbor Laboratory}
+  publisher={Cold Spring Harbor Laboratory},
+  url={http://dx.doi.org/10.1038/s41587-021-00870-2}
 }
 
 @article{xi2021benchmarking,
@@ -426,7 +434,8 @@
   number={2},
   pages={176--194},
   year={2021},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  url={https://doi.org/10.1016/j.cels.2020.11.008}
 }
 
 @article{xie2021automatic,
@@ -436,7 +445,8 @@
   volume={19},
   pages={5874--5887},
   year={2021},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S2001037021004499}
 }
 
 @article{sun2022comprehensive,
@@ -447,7 +457,8 @@
   number={2},
   pages={bbab567},
   year={2022},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url={https://academic.oup.com/bib/article/23/2/bbab567/6502554}
 }
 
 @article{wang2019comparative,
@@ -458,7 +469,8 @@
   number={1},
   pages={1--16},
   year={2019},
-  publisher={BioMed Central}
+  publisher={BioMed Central},
+  url={https://academic.oup.com/bib/article/20/1/288/4364840}
 }
 
 @article{argelaguet2021computational,
@@ -469,7 +481,8 @@
   number={10},
   pages={1202--1215},
   year={2021},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/s41587-021-00895-7}
 }
 
 @article{luecken2022benchmarking,
@@ -480,7 +493,8 @@
   number={1},
   pages={41--50},
   year={2022},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/s41592-021-01336-8}
 }
 
 @article{ouyang2021shinycell,
@@ -491,7 +505,8 @@
   number={19},
   pages={3374--3376},
   year={2021},
-  publisher={Oxford Academic}
+  publisher={Oxford Academic},
+  url={https://academic.oup.com/bioinformatics/article/37/19/3374/6198103}
 }
 
 @article{cakir2020comparison,
@@ -502,7 +517,8 @@
   number={3},
   pages={lqaa052},
   year={2020},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url={https://pmc.ncbi.nlm.nih.gov/articles/PMC7391988/}
 }
 
 @article{tran2020benchmark,
@@ -570,6 +586,18 @@
   year={2024},
   publisher={Nature Publishing Group UK London},
   url={https://doi.org/10.1038/s44320-024-00045-6}
+}
+
+@article{janssen2023effect,
+  title={The effect of background noise and its removal on the analysis of single-cell expression data},
+  author={Janssen, Philipp and Kliesmete, Zane and Vieth, Beate and Adiconis, Xian and Simmons, Sean and Marshall, Jamie and McCabe, Cristin and Heyn, Holger and Levin, Joshua Z and Enard, Wolfgang and others},
+  journal={Genome biology},
+  volume={24},
+  number={1},
+  pages={140},
+  year={2023},
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1186/s13059-023-02978-x}
 }
 
 ## sc spatial -------------------------------------------------------------------------------
@@ -735,6 +763,30 @@
   year={2020},
   publisher={Elsevier},
   url={https://www.sciencedirect.com/science/article/pii/S2001037020303019}
+}
+
+@article{gontarz2020comparison,
+  title={Comparison of differential accessibility analysis strategies for ATAC-seq data},
+  author={Gontarz, Paul and Fu, Shuhua and Xing, Xiaoyun and Liu, Shaopeng and Miao, Benpeng and Bazylianska, Viktoriia and Sharma, Akhil and Madden, Pamela and Cates, Kitra and Yoo, Andrew and others},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={10150},
+  year={2020},
+  publisher={Nature Publishing Group UK London},
+  url={https://www.nature.com/articles/s41598-020-66998-4}
+}
+
+@article{teo2024best,
+  title={Best practices for differential accessibility analysis in single-cell epigenomics},
+  author={Teo, Alan Yue Yang and Squair, Jordan W and Courtine, Gregoire and Skinnider, Michael A},
+  journal={Nature Communications},
+  volume={15},
+  number={1},
+  pages={8805},
+  year={2024},
+  publisher={Nature Publishing Group UK London},
+  url={https://www.nature.com/articles/s41467-024-53089-5}
 }
 
 ## airr ----------------------------------------------------------------------------------------
@@ -1000,6 +1052,27 @@ doi = {10.1016/j.it.2022.01.003},
 url = {https://www.sciencedirect.com/science/article/pii/S1471490622000035},
 author = {Dhakshayini Morgan and Vinay Tergaonkar},
 abstract = {During adaptive immunity, B cells differentiate either into memory B cells or plasma cells and produce antibodies against foreign antigens to fight infection. Additionally, they behave as antigen-presenting cells and participate in T cell activation during cellular immune responses. However, their functional dysregulation can result in various autoimmune diseases and cancers. With significant breakthroughs in single cell technologies, assessing individual B cell genomics, transcriptomics, and proteomics can give deeper insights into mammalian B cell development, differentiation, antibody repertoire, and responses under conditions of homeostasis, infection, and aberrations during disease. In this review, we discuss the adoption of single cell approaches to identify different B cell gene signatures and biomarkers in normal and diseased tissues, and subsequent benefits for future therapeutic discoveries.}
+}
+
+@article{balashova2024systematic,
+  title={Systematic evaluation of B-cell clonal family inference approaches},
+  author={Balashova, Daria and van Schaik, Barbera DC and Stratigopoulou, Maria and Guikema, Jeroen EJ and Caniels, Tom G and Claireaux, Mathieu and van Gils, Marit J and Musters, Anne and Anang, Dornatien C and de Vries, Niek and others},
+  journal={BMC immunology},
+  volume={25},
+  number={1},
+  pages={13},
+  year={2024},
+  publisher={Springer},
+  url={https://bmcimmunol.biomedcentral.com/articles/10.1186/s12865-024-00600-8}
+}
+
+@article{voss2024evaluating,
+  title={Evaluating methods for B-cell clonal family assignment},
+  author={Voss, Katalin and Kaur, Katrina M and Banerjee, Rituparna and Breden, Felix and Pennell, Matt},
+  journal={bioRxiv},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory Preprints},
+  url={https://pmc.ncbi.nlm.nih.gov/articles/PMC11160721/}
 }
 
 ## meta transcriptomics ------------------------------------------------------------------------
