Added effect of feature selection on integration, tfvelo, osca

--- a/references.bib
+++ b/references.bib
@@ -600,6 +600,16 @@
   url={https://link.springer.com/article/10.1186/s13059-023-02978-x}
 }
 
+@article{zappia2025feature,
+  title={Feature selection methods affect the performance of scRNA-seq data integration and querying},
+  author={Zappia, Luke and Richter, Sabrina and Ram{\'\i}rez-Su{\'a}stegui, Ciro and Kfuri-Rubens, Raphael and Vornholz, Larsen and Wang, Weixu and Dietrich, Oliver and Frishberg, Amit and Luecken, Malte D and Theis, Fabian J},
+  journal={Nature methods},
+  pages={1--11},
+  year={2025},
+  publisher={Nature Publishing Group US New York},
+  url={https://doi.org/10.1038/s41592-025-02624-3}
+}
+
 ## sc spatial -------------------------------------------------------------------------------
 
 @article{walker2022deciphering,
