Added trajectory and velocity tools

--- a/references.bib
+++ b/references.bib
@@ -610,6 +610,18 @@
   url={https://doi.org/10.1038/s41592-025-02624-3}
 }
 
+@article{xiao2024benchmarking,
+  title={Benchmarking multi-omics integration algorithms across single-cell RNA and ATAC data},
+  author={Xiao, Chuxi and Chen, Yixin and Meng, Qiuchen and Wei, Lei and Zhang, Xuegong},
+  journal={Briefings in Bioinformatics},
+  volume={25},
+  number={2},
+  pages={bbae095},
+  year={2024},
+  publisher={Oxford University Press},
+  url={https://doi.org/10.1093/bib/bbae095}
+}
+
 ## sc spatial -------------------------------------------------------------------------------
 
 @article{walker2022deciphering,
